# AMNS_IMPLEMENTATION

./: README.md
ILLUSTRATIONS/drawio/: ALU_multiple_stage_ACCUMULATE.drawio  ALU_multiple_stage_ADD.drawio  ALU_multiple_stage_POLY_MUL.drawio  ALU_multiple_stage_POLY_MUL_MOD.drawio  ALU_multiple_stage_SCALAR_MUL.drawio  ALU_single_stage.drawio  ALU_single_stage_arith.drawio  FSM_0.drawio  FSM_1.drawio  Full_System.drawio  Poly_mul_ALU_single_stage.drawio  Poly_mul_mod_full_stage.drawio  Poly_mul_mod_full_stage_0.drawio  Poly_mul_mod_full_stage_1.drawio  Poly_mul_mod_illustration.drawio  Poly_mul_parallel_algorithm.drawio  Poly_mul_parallel_algorithm_0.drawio  Poly_mul_parallel_algorithm_1.drawio  Poly_mul_parallel_algorithm_2.drawio  Poly_parallel_add_full_stage.drawio
VALIDATION/MAGMA/: MAGMA.txt
VALIDATION/TEST_VECTORS/GENERATION/: CMakeLists.txt  add_mult_poly.c  add_mult_poly.h  amns_init.c  amns_init.h  main.c  structs_data.h  useful_functs.c  useful_functs.h
VIVADO/AMNS_ARITH_HW/: AMNS_ARITH_HW.xpr  vivado.jou  vivado_11428.backup.jou  vivado_15380.backup.jou  vivado_16240.backup.jou  vivado_2480.backup.jou  vivado_8856.backup.jou  vivado_pid4916.str
VIVADO/AMNS_arith_co_design/: AMNS_arith_co_design.xpr  AMNS_arith_co_design.xsa  vitis_pid10040.str  vitis_pid2080.str  vitis_pid8736.str  vitis_pid9240.str  vitis_pid9672.str  vivado.jou  vivado_1004.backup.jou  vivado_17076.backup.jou  vivado_7160.backup.jou
VIVADO/IP/managed_ip_project/: managed_ip_project.xpr  vivado.jou  vivado_19764.backup.jou  (+1 more)
VIVADO/SANDBOX/: SANDBOX.xpr
VIVADO/VITIS/: .analytics
(+501 files in other folders)
